--- a/doc/TitleList.tex
+++ b/doc/TitleList.tex
@@ -19,7 +19,7 @@
 
 \vspace{5em}
 \begin{center}
-\textbf{ОТЧЕТ ПО ЛАБОРАТОРНОЙ РАБОТЕ №1\\ Стек}
+\textbf{ОТЧЕТ ПО ЛАБОРАТОРНОЙ РАБОТЕ №1\\ Бинарное дерево}
 \end{center}
 
 %\vspace{2em}
@@ -31,8 +31,8 @@
 \vspace{6em}
 
 \hbox to \textwidth
-{\parbox{6 cm}{Студенты\\ группы\\ ВТ-С-Б12}\dotfill \parbox{4 cm}{
-\begin{flushright}Студент 1\\ Студент 2\\ Студент 3\\ Студент 4\end{flushright}}}
+{\parbox{6 cm}{Студент\\ группы\\ ВТ-С-Б12}\dotfill \parbox{4 cm}{
+\begin{flushright}Луценко~Г.А.\end{flushright}}}
 \vspace{2em}
 
 \hbox to \textwidth
