--- a/doc/Task.tex
+++ b/doc/Task.tex
@@ -6,8 +6,13 @@
 В программном решении следует реализовать следующие операции над контейнером: 
 \begin{itemize}
 \item создание и уничтожение контейнера; 
-\item добавление элементов контейнера; 
-\item поиск элементов контейнера; 
+\item  добавление и извлечение элементов контейнера; 
+\item  обход всех элементов контейнера (итератор); 
+\item удаление из контейнера дублирующих элементов; 
+\item  вычисление количества элементов в контейнере; 
+\item  реверс контейнера (первый элемент контейнера становится последним, второй элемент становится предпоследним и т.д.); 
+\item  объединение, пересечение и вычитание контейнеров; 
+\item  сохранение контейнера в дисковом файле и восстановление контейнера из файла. 
 \end{itemize}
 
 \paragraph{Ограничения.}
