--- a/doc/Report.tex
+++ b/doc/Report.tex
@@ -20,6 +20,13 @@
 \usepackage{graphicx} %разрешить включение PostScript-графики
 \graphicspath{{Images/}} %относительный путь к каталогу с рисунками,это может быть мягкая ссылка
 \usepackage{listings}
+\lstloadlanguages{[LaTeX]TeX,bash,MetaPost,Fortran,Perl,C++,make}
+\lstset{language=[LaTeX]TeX,
+extendedchars=true,
+escapechar=|,
+frame=tb,
+commentstyle=\itshape,
+stringstyle=\bfseries}
 
 
 \RequirePackage{caption}
