Отчёт с описанием бинарного дерева

--- a/doc/Description.tex
+++ b/doc/Description.tex
@@ -58,3 +58,56 @@ struct BTree
 
 Как в случае со списком, программа должна хранить указатель на первый элемент дерева, его вершину, который ещё называют {\bf корнем дерева} (Root). В начале работы программы дерево пусто и корневой элемент может быть определён как {\it BTree* Root = NULL;}.
 
+{\bf Добавление элемента в дерево.}
+
+Процедура добавления имеет следующий алгоритм работы:
+\begin{enumerate}
+\item если проверяемый узел пуст, то:
+\begin{enumerate}
+\item создаём новый узел;
+\item левый и правый указатель указывают на пусто;
+\end{enumerate}
+\item иначе выбираем ветку, по которой продолжим просмотр дерева. Если значение текущего элемента больше искомого, просматриваем левую ветку поддерева, в противном случае правую.
+\end{enumerate}
+
+{\bf Удаление элемента из дерева.}
+
+Процедура удаления имеет следующий алгоритм работы:
+\begin{enumerate}
+\item Если текущий узел пуст, то остановиться
+\item Иначе сравнить ключ искомого узла (К) с ключом текущего узла (Т).
+\begin{enumerate}
+\item Если K>Т, рекурсивно удалить искомый узел из правого поддерева.
+\item Если K<Т, рекурсивно удалить K из левого поддерева Т.
+\item Если K=Т, то необходимо рассмотреть два случая:
+\begin{enumerate}
+\item Если одного из детей нет, то значения полей второго ребёнка m ставим вместо соответствующих значений текущего узла, затирая его старые значения и освобождаем память, занимаемую узлом.
+\item Если оба потомка присутствуют, то:
+\begin{enumerate}
+\item найдём узел m, являющийся самым левым узлом правого поддерева;
+\item скопируем значения полей (ключ, значение) узла m в соответствующие поля узла n.
+\item у предка узла m заменим ссылку на узел m ссылкой на правого потомка узла m (который, в принципе, может быть пустым).
+\item освободим память, занимаемую узлом m (на него теперь никто не указывает, а его данные были перенесены в узел n).
+\end{enumerate}
+\end{enumerate}
+\end{enumerate}
+\end{enumerate}
+
+
+{\bf Поиск элемента в дереве.}
+
+Процедура поиска имеет следующий алгоритм работы:
+\begin{enumerate}
+\item Если дерево пусто, то сообщить, что узел не найден, и остановиться.
+\item Иначе сравнить искомый ключ (К) со значением ключа текущего узла (Т).
+\begin{enumerate}
+\item Если K=Т, выдать ссылку на этот узел и остановиться.
+\item Если K>Т, рекурсивно искать ключ K в правом поддереве Т.
+\item Если K<Т, рекурсивно искать ключ K в левом поддереве Т.
+\end{enumerate}
+\end{enumerate}
+
+Может возникнуть вопрос, зачем нужны такие сложности, если можно просто хранить данные в виде списка или массива. Ответ прост — операции с деревом работают быстрее. При реализации списком все функции требуют O(n) действий, где n — размер структуры. Операции с деревом же работают за O(h), где h — максимальная глубина дерева (глубина — расстояние от корня до вершины). В оптимальном случае, когда глубина всех листьев одинакова, в дереве будет n=$2^{h}$ вершин. Значит, сложность операций в деревьях, близких к оптимуму будет O($\log_{2} n$). К сожалению, в худшем случае дерево может выродится и сложность операций будет как у списка, например, если вставлять значения в порядке их возрастания или убывания.
+
+
+Бинарные деревья применяются не только для хранения и поиска информации, но и используются в различных алгоритмах сортировки и сжатия данных. Кроме того, существуют более продвинутые варианты бинарных деревьев, которые используются в компьютерной графике, в играх, при создание алгоритмов принятия решений и для множества других целей.
