--- a/doc/Listing.tex
+++ b/doc/Listing.tex
@@ -4,4 +4,6 @@
 
 \lstinputlisting[caption=container.cpp,language=C++]{./../src/container.cpp}
 
+\lstinputlisting[caption=stdafx.h,language=C++]{./../src/stdafx.h}
+
 \lstinputlisting[caption=main.cpp,language=C++]{./../src/main.cpp}
